authentication works normally

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Auth0": {
+    "Authority": "https://dev-6anxoci7.us.auth0.com",
+    "ApiIdentifier": "https://api.herexamen.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +10,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-"AllowedHosts": "*"
+  "AllowedHosts": "*"
 }
