authorization and showing users works

--- a/Client/wwwroot/appsettings.json
+++ b/Client/wwwroot/appsettings.json
@@ -5,6 +5,6 @@
   "Auth0": {
     "Authority": "https://dev-6anxoci7.us.auth0.com",
     "ClientId": "1JM5csaEt18UXJyL3XDdu8ub1CohR8qJ",
-    "Audience": "https://api.herexamen.com"
+    "Audience": "https://dev-6anxoci7.us.auth0.com/api/v2/"
   }
 }
