--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,7 +1,9 @@
 {
   "Auth0": {
     "Authority": "https://dev-6anxoci7.us.auth0.com",
-    "ApiIdentifier": "https://api.herexamen.com"
+    "ApiIdentifier": "https://dev-6anxoci7.us.auth0.com/api/v2/",
+    "ClientId": "1JM5csaEt18UXJyL3XDdu8ub1CohR8qJ",
+    "ClientSecret": "zx-16n_Hiqq7c8Qyfl1Ni3qLgPjtegzpP9NyvI8GfTrZPvbl-gYNAy_bgvT6T-pK"
   },
   "Logging": {
     "LogLevel": {
