product backlog volledig geimplementeerd

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-1IFQISOB\\MSSQLSERVER02;DATABASE=HerexamenTry;User Id=AppLogin;Password=Rayan180199/"
+  },
   "Auth0": {
     "Authority": "https://dev-6anxoci7.us.auth0.com",
     "ApiIdentifier": "https://dev-6anxoci7.us.auth0.com/api/v2/",
@@ -9,7 +12,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
   "AllowedHosts": "*"
